<resources>
    <string name="app_name">优惠宝</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">用户注册</string>

    <!-- Strings related to login -->
    <string name="prompt_mobile_no">手机号码</string>
    <string name="prompt_password">密码</string>
    <string name="action_login">登录</string>
    <string name="action_register">注册</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_phone">用户名格式不正确</string>
    <string name="error_invalid_password">请填写四位以上密码</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <!-- Strings related to register -->
    <string name="prompt_register_mobile_no">手机号码（用户名）</string>
    <string name="prompt_register_verify_code">短信动态码</string>
    <string name="action_obtain_verify_code">获取验证码</string>
    <string name="prompt_set_password">设置密码</string>
    <string name="prompt_set_password_again">再次输入密码</string>
    <string name="prompt_input_name">商户名</string>
    <string name="prompt_input_license_no">营业执照号</string>
    <string name="prompt_input_legal_person_name">法人姓名</string>
    <string name="prompt_input_business_scope">经营范围</string>
    <string name="prompt_input_business_address">地址</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
